fix: adjust z-index for search toggle in header (#269)

--- a/material-overrides/assets/stylesheets/polkadot.css
+++ b/material-overrides/assets/stylesheets/polkadot.css
@@ -499,6 +499,14 @@ input.md-search__input::placeholder {
     max-width: 100%;
     opacity: 1;
   }
+
+  [data-md-toggle="search"]:checked ~ .md-header .md-header__tools,
+  [data-md-toggle="search"]:checked
+    ~ .md-header
+    .md-header__option[data-md-component="palette"]
+    .md-header__button {
+    z-index: 0;
+  }
 }
 
 @media screen and (max-width: 59.9844em) {
